[package]
name = "aprs-decode"
version = "0.1.0"
edition = "2024"
description = "Robust APRS packet parsing — text (APRS-IS) and binary (AX.25) input"
license = "MIT OR Apache-2.0"
license-file = "LICENSE-MIT"
readme = "README.md"
repository = "https://github.com/Deatojef/aprs-decode"
keywords = ["aprs", "ax25", "amateur-radio", "packet", "ham-radio"]
categories = ["network-programming", "parser-implementations"]
exclude = ["memory/", "CLAUDE.md"]

[lib]
name = "aprs_decode"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"
